Introduce AsyncNotificationManager to avoid blocking UI thread
On Android, the NotificationManager API uses binder and calls are
sent to another process. Sometimes these calls can take more than
500ms due to inter-process issues. This CL introduces an Async
version of the NotificationManager, so that main thread is not blocked.
Will follow up on other features that calls NotificationManager to
eventually deprecate the sync version NotificationManagerProxy.

Bug:b:242038130, b:242028843

Change-Id: I0fe53d2c21dd3456c213156f68d614224e78b512
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5299894
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1264233}