@@ -41,10 +41,11 @@ import org.chromium.chrome.R;
 import org.chromium.chrome.browser.DefaultBrowserInfo2;
 import org.chromium.chrome.browser.flags.ChromeFeatureList;
 import org.chromium.chrome.browser.notifications.NotificationUmaTracker;
+import org.chromium.components.browser_ui.notifications.NotificationsFeatureList;
 import org.chromium.components.feature_engagement.FeatureConstants;
 import org.chromium.components.feature_engagement.Tracker;
 
-import java.util.Collections;
+import java.util.Map;
 
 /** Unit tests for {@link ReengagementNotificationController}. */
 @RunWith(BaseRobolectricTestRunner.class)
@@ -76,7 +77,11 @@ public class ReengagementNotificationControllerTest {
     @Before
     public void setUp() throws Exception {
         FeatureList.setTestFeatures(
-                Collections.singletonMap(ChromeFeatureList.REENGAGEMENT_NOTIFICATION, true));
+                Map.of(
+                        ChromeFeatureList.REENGAGEMENT_NOTIFICATION,
+                        true,
+                        NotificationsFeatureList.ASYNC_NOTIFICATION_MANAGER,
+                        true));
         mContext = ApplicationProvider.getApplicationContext();
         mShadowNotificationManager =
                 Shadows.shadowOf(
